--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,6 +3,7 @@
   padding: 10px 40px;
   margin: 0 auto;
   width: 100%;
+  height: 70px;
   background-color: black;
   box-shadow: -1px 2px 5px #009799;
   position: fixed;
@@ -19,10 +20,9 @@
   color: white;
 }
 
-.single{
-  margin-top: 8px;
+#gapLink {
+  padding-top:0;
 }
-
 
 .header {
   display: flex;
@@ -31,7 +31,6 @@
   padding: 0;
   margin: 0;
 }
-
 
 .hamburger {
   width: 40px;
@@ -61,8 +60,6 @@
 .items:nth-child(1) {
  padding-top: 0;
 }
-
-
 
 .resume {
   text-decoration: none;
@@ -101,7 +98,6 @@
     display: flex;
     flex-direction: row;
     justify-content: right;
-    
   }
  .items {
     display: none;
@@ -117,8 +113,6 @@
     min-height: 40px;
     display: flex;
     flex-direction: column;
-    
-    
   }
 }
 
@@ -140,7 +134,6 @@
   display: flex;
   flex-direction: column;
   text-align: center;
- 
 }
 
 .close {
